<resources>
    <string name="app_name">Absensi</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on">Front</string>
    <string name="toggle_turn_off">Back</string>
    <string name="desc_camera_source_activity">Vision detectors demo with live camera preview</string>
    <string name="desc_still_image_activity">Vision detectors demo with a still image</string>
    <string name="desc_image_convert_activity">Image format conversions testing Activity</string>
    <string name="desc_sdk_doctor_activity">SDK Doctor testing Activity</string>
    <string name="desc_model_download_activity">Custom Model Download testing Activity</string>
    <string name="download_error">Download error</string>
    <string name="start_over">Start over</string>
    <string name="menu_item_settings">Settings</string>
    <string name="pref_screen_title_live_preview">Live preview settings</string>
    <string name="pref_screen_title_still_image">Still image settings</string>
    <string name="pref_category_face_detection">Face detection</string>
    <string name="pref_category_object_detection">Object detection</string>
    <string name="pref_category_automl">AutoML Image Labeling</string>
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>
    <string name="pref_title_front_camera_preview_size">Front camera preview size</string>
    <string name="pref_title_camera_live_viewport">Enable live viewport</string>
    <string name="pref_summary_camera_live_viewport">Do not block camera preview drawing on detection</string>
    <string name="pref_title_object_detector_enable_multiple_objects">Enable multiple objects</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects" translatable="false">lpodemo</string>
    <string name="pref_key_still_image_object_detector_enable_multiple_objects" translatable="false">siodemo</string>
    <string name="pref_title_object_detector_enable_classification">Enable classification</string>
    <string name="pref_key_live_preview_object_detector_enable_classification" translatable="false">lpodec</string>
    <string name="pref_key_still_image_object_detector_enable_classification" translatable="false">siodec</string>
    <string name="pref_title_face_detector_landmark_mode">Landmark mode</string>
    <string name="pref_key_live_preview_face_detection_landmark_mode" translatable="false">lpfdlm</string>
    <string name="pref_entries_face_detector_landmark_mode_no_landmarks">No landmarks</string>
    <string name="pref_entries_face_detector_landmark_mode_all_landmarks">All landmarks</string>
    <string name="pref_entry_values_face_detector_landmark_mode_no_landmarks" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_landmark_mode_all_landmarks" translatable="false">2</string>
    <string name="pref_title_face_detector_contour_mode">Contour mode</string>
    <string name="pref_key_live_preview_face_detection_contour_mode" translatable="false">lpfdcm</string>
    <string name="pref_entries_face_detector_contour_mode_no_contours">No contours</string>
    <string name="pref_entries_face_detector_contour_mode_all_contours">All contours</string>
    <string name="pref_entry_values_face_detector_contour_mode_no_contours" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_contour_mode_all_contours" translatable="false">2</string>
    <string name="pref_title_face_detector_classification_mode">Classification mode</string>
    <string name="pref_key_live_preview_face_detection_classification_mode" translatable="false">lpfdcfm</string>
    <string name="pref_entries_face_detector_classification_mode_no_classifications">No classifications</string>
    <string name="pref_entries_face_detector_classification_mode_all_classifications">All classifications</string>
    <string name="pref_entry_values_face_detector_classification_mode_no_classifications" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_classification_mode_all_classifications" translatable="false">2</string>
    <string name="pref_title_face_detector_performance_mode">Performance mode</string>
    <string name="pref_key_live_preview_face_detection_performance_mode" translatable="false">lpfdpm</string>
    <string name="pref_entries_face_detector_performance_mode_fast">Fast</string>
    <string name="pref_entries_face_detector_performance_mode_accurate">Accurate</string>
    <string name="pref_entry_values_face_detector_performance_mode_fast" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_performance_mode_accurate" translatable="false">2</string>
    <string name="pref_title_face_detector_face_tracking">Face tracking</string>
    <string name="pref_key_live_preview_face_detection_face_tracking" translatable="false">lpfdft</string>
    <string name="pref_title_face_detector_min_face_size">Minimum face size</string>
    <string name="pref_key_live_preview_face_detection_min_face_size" translatable="false">lpfdmfs</string>
    <string name="pref_dialog_message_face_detector_min_face_size">Proportion of the head width to the image width, and the valid value range is [0.0, 1.0]</string>
    <string name="pref_toast_invalid_min_face_size">Minimum face size must be a float value and in the range [0.0, 1.0]</string>
    <string name="pref_title_automl_remote_model_name">AutoML Remote Model Name</string>
    <string name="pref_key_live_preview_automl_remote_model_name" translatable="false">lparmn</string>
    <string name="pref_dialog_message_automl_remote_model_name">Remote model name in the Firebase Console.</string>
    <string name="pref_title_automl_model_choices">AutoML Model Choices</string>
    <string name="pref_entries_automl_models_remote">Remote</string>
    <string name="pref_entries_automl_models_local">Local</string>
    <string name="pref_key_live_preview_automl_remote_model_choices" translatable="false">lparmc</string>
    <string name="home_toolbar_title">Home</string>
    <string name="attendance_toolbar_title">Attendance</string>
    <string name="account_menu_title">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello,</string>
    <string name="todays_attendance">Today\'s Attendance</string>
    <string name="check_in_out">Check In/Out</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="monthly_attendance_desc">This chart shows your attendance on this %1$s</string>
    <string name="absent">Absent</string>
    <string name="late">Late</string>
    <string name="present">Present</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="indonesian_dial_code">+62</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="change_password">Change Password</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="button_edit">Edit</string>
    <string name="button_add_sample">Add Face Sample</string>
    <string name="imageReshaping">Image Reshaping with SVM</string>
    <string name="eigenfaces">Eigenfaces with NN</string>
    <string name="tensorflow">TensorFlow with SVM or KNN</string>
    <string name="caffe">Caffe with SVM or KNN</string>
    <string name="error_internal_server">Internal Server Error</string>
    <string name="error_no_internet_connection">No Internet Connection</string>
    <string name="error_request_timeout">Request Timeout</string>
    <string name="employee_id">Employee ID</string>
    <string name="register">Register</string>
    <string name="login_hint">Email or Employee ID</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="snackbar_dissmiss">ok</string>
    <string name="re_password">Repeat password</string>
    <string name="error_cannot_be_empty">%1$s cannot be empty</string>
    <string name="error_input_must_more_than">must be at least %1$d characters</string>
    <string name="error_password_not_match">Password not match</string>
    <string name="todays_work_hour">Today\'s Work Hour</string>
    <string name="people_not_attendance">%1$d people haven\'t attended</string>
    <string name="all_attend">all employee already attended</string>
    <string name="my_month_attendance">My %1$s\'s Attendance</string>
    <string name="hrs">S</string>
    <string name="now_is">Now is</string>
    <string name="check_in_at">Checked in at %1$s</string>
    <string name="check_out_at">Checked out at %1$s</string>
    <string name="checking_in">Checking in…</string>
    <string name="checking_out">Checking out…</string>
    <string name="checking_in_successfully">Checked In Successfully</string>
    <string name="checking_out_successfully">Checked Out Successfully</string>
    <string name="check_model">Check for Model Update</string>
    <string name="upload_model">Upload Training Model</string>
    <string name="upload_success">Models Uploaded Successfully</string>
    <string name="model_update_available">New Version of Model is Available to Download</string>
    <string name="model_up_to_date">Your Current Model is Up to Date</string>
    <string name="download_new_model">Download Model</string>
    <string name="login_register">Login / Register</string>
    <string name="instant_check_in_out">Instant Check In / Out</string>
    <string name="add_face_parallel">Position your face parallel to the front camera</string>
    <string name="add_face_left">Position your face about 45 degrees to the left of the front camera</string>
    <string name="add_face_right">Position your face about 45 degrees to the right of the front camera</string>
    <string name="add_face_title_1">Step 1 of 3</string>
    <string name="add_face_title_2">Step 2 of 3</string>
    <string name="add_face_title_3">Step 3 of 3</string>
    <string name="start_capture">Start Capture</string>
    <string name="face_added_successfully">Face Added Successfully</string>
</resources>